--- a/prometheus-2.51.2.linux-arm64/prometheus.yml
+++ b/prometheus-2.51.2.linux-arm64/prometheus.yml
@@ -19,14 +19,19 @@ rule_files:
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
 scrape_configs:
+  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: "prometheus"
+    # metrics_path defaults to '/metrics'
+    # scheme defaults to 'http'.
     static_configs:
       - targets: ["localhost:9090"]
 
-  - job_name: "redis"
-    static_configs:
-      - targets: ["localhost:9121"]
-
+  # FastAPI application metrics
   - job_name: "fastapi"
     static_configs:
       - targets: ["localhost:8000"]
+
+  # Redis Exporter metrics
+  - job_name: "redis"
+    static_configs:
+      - targets: ["localhost:9121"]
