--- a/.env.sample
+++ b/.env.sample
@@ -111,3 +111,10 @@ ENABLE_REAL_TIME_PROCESSING=true
 ENABLE_HISTORICAL_PROCESSING=true
 ENABLE_MODEL_OPTIMIZATION=true
 ENABLE_ADVANCED_METRICS=true
+
+#######################
+# MLFLOW CONFIGURATION
+#######################
+
+MLFLOW_TRACKING_URI=http://127.0.0.1:5001 # URI of the MLflow Tracking Server
+# MLFLOW_ARTIFACT_ROOT=./mlruns # Optional: Can be set here or via server config
