--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
     "git.confirmSync": false,
     "git.enableSmartCommit": true,
     "git.suggestSmartCommit": true,
+    "git.openRepositoryInParentFolders": "always",
+    "git.path": "git",
+    "git.detectSubmodules": true,
     "diffEditor.ignoreTrimWhitespace": false,
     "editor.formatOnSave": true,
     "python.linting.enabled": true,
@@ -14,5 +17,9 @@
     "python.testing.pytestEnabled": true,
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
-    "editor.rulers": [100]
+    "editor.rulers": [
+        100
+    ],
+    "scm.defaultViewMode": "tree",
+    "workbench.editor.enablePreview": false
 }
